# ray-tracer

./: CMakeLists.txt  README.md  main  output.ppm
src/: aabb.hpp  bvh.hpp  camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  main  main.cpp  material.hpp  moving_sphere.hpp  output.ppm  ray.hpp  rtweekend.hpp  sphere.hpp  texture.hpp  vec3.hpp
